crates/kaban-parser/tests/snapshots/statements__interface_decl_with_no_shape_generics.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: 
    pub interface Talks<T> {
        func step(step: T) -> T {
            return step;
        }

        func default_talk(self&, message: c8);
    }
    

Block [
    InterfaceDeclWithGeneric {
        is_pub: true,
        interface_name: Identifier("Talks"),
        statements: [
            FuncDeclWithNoGeneric {
                is_pub: false,
                name: Identifier("step"),
                params: [
                    Param {
                        binding: IdentifierBinding {
                            name: Identifier("step"),
                            mutable: false,
                        },
                        type: NamedType(
                            Identifier("T"),
                        ),
                    },
                ],
                return_type: NamedType(
                    Identifier("T"),
                ),
                body: Block [
                    Return(
                        Identifier("step"),
                    ),
                ],
            },
            FuncNoBodyWithNoGeneric {
                is_pub: false,
                name: Identifier("default_talk"),
                params: [
                    SelfParam(
                        Ampersand("&"),
                    ),
                    Param {
                        binding: IdentifierBinding {
                            name: Identifier("message"),
                            mutable: false,
                        },
                        type: Type(C8),
                    },
                ],
                return_type: "NONE",
            },
        ],
        generic_params: [
            GenericParam {
                name: Identifier("T"),
            },
        ],
    },
]
