crates/kaban-parser/tests/snapshots/statements__interface_with_generics_and_generic_methods_inside.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: 
    pub interface Functor<T> {
        func map<U>(self&, f: func(x: T) -> U) -> Functor<U>;
        func flat_map<U>(self&, f: func(x: T) -> Functor<U>) -> Functor<U>;
    }
    

Block [
    InterfaceDeclWithGeneric {
        is_pub: true,
        interface_name: Identifier("Functor"),
        statements: [
            FuncNoBodyWithGeneric {
                is_pub: false,
                name: Identifier("map"),
                params: [
                    SelfParam(
                        Ampersand("&"),
                    ),
                    Param {
                        binding: IdentifierBinding {
                            name: Identifier("f"),
                            mutable: false,
                        },
                        type: FuncType {
                            params: [
                                Param {
                                    binding: IdentifierBinding {
                                        name: Identifier("x"),
                                        mutable: false,
                                    },
                                    type: NamedType(
                                        Identifier("T"),
                                    ),
                                },
                            ],
                            return type: NamedType(
                                Identifier("U"),
                            ),
                        },
                    },
                ],
                generic_params: [
                    GenericParam {
                        name: Identifier("U"),
                    },
                ],
                return_type: TypeWithGenerics {
                    type: NamedType(
                        Identifier("Functor"),
                    ),
                    generic_args: [
                        NamedType(
                            Identifier("U"),
                        ),
                    ],
                },
            },
            FuncNoBodyWithGeneric {
                is_pub: false,
                name: Identifier("flat_map"),
                params: [
                    SelfParam(
                        Ampersand("&"),
                    ),
                    Param {
                        binding: IdentifierBinding {
                            name: Identifier("f"),
                            mutable: false,
                        },
                        type: FuncType {
                            params: [
                                Param {
                                    binding: IdentifierBinding {
                                        name: Identifier("x"),
                                        mutable: false,
                                    },
                                    type: NamedType(
                                        Identifier("T"),
                                    ),
                                },
                            ],
                            return type: TypeWithGenerics {
                                type: NamedType(
                                    Identifier("Functor"),
                                ),
                                generic_args: [
                                    NamedType(
                                        Identifier("U"),
                                    ),
                                ],
                            },
                        },
                    },
                ],
                generic_params: [
                    GenericParam {
                        name: Identifier("U"),
                    },
                ],
                return_type: TypeWithGenerics {
                    type: NamedType(
                        Identifier("Functor"),
                    ),
                    generic_args: [
                        NamedType(
                            Identifier("U"),
                        ),
                    ],
                },
            },
        ],
        generic_params: [
            GenericParam {
                name: Identifier("T"),
            },
        ],
    },
]
