crates/kaban-parser/tests/snapshots/statements__let_statement_with_i32_type.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: let y: i32 = 10 + 5;

Block [
    Let {
        name: IdentifierBinding {
            name: Identifier("y"),
            mutable: false,
        },
        type: Type(I32),
        assignment: Add {
            left: IntLit("10"),
            right: IntLit("5"),
        },
    },
]
